[tool.poetry]
name = "bls"
version = "0.4.0.dev"
description = "A library to access Bureau of Labor Statistics data"
authors = ["Oliver Sherouse <oliver@oliversherouse.com>"]
license = "GPL-2.0+"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.6"
requests = ">=2.0"
pandas = ">=0.20"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-flake8 = "^1.0"
ipython = "^7.8"
flake8-bugbear = "^20.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
